[package]
name = "gl-rs"
version = "2.0.0"
edition = "2021"
description = "Double-entry general ledger with journal engine, accruals, and revenue recognition"

[dependencies]
axum = "0.8"
security = { path = "../../platform/security" }
health = { path = "../../platform/health" }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "migrate", "uuid"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tower-http = { version = "0.6", features = ["cors"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
event-bus = { path = "../../platform/event-bus" }
projections = { path = "../../platform/projections" }
async-nats = "0.38"
futures = "0.3"
sha2 = "0.10"
prometheus = "0.13"

[dev-dependencies]
serial_test = "3.3.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
jsonwebtoken = "9"
dotenvy = "0.15"

[[bin]]
name = "rebuild_balances"
path = "src/bin/rebuild_balances.rs"

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[[bin]]
name = "dlq_replay_drill"
path = "src/bin/dlq_replay_drill.rs"

[lints]
workspace = true
