[package]
name = "maintenance-rs"
version = "2.2.0"
edition = "2021"
description = "Maintenance management: work orders, preventive plans, meters, and labor tracking"

[[bin]]
name = "maintenance-rs"
path = "src/main.rs"

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[[bin]]
name = "openapi_dump"
path = "src/bin/openapi_dump.rs"

[lib]
name = "maintenance_rs"
path = "src/lib.rs"

[dependencies]
axum = "0.8"
security = { path = "../../platform/security" }
health = { path = "../../platform/health" }
platform-sdk = { path = "../../platform/platform-sdk" }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "migrate", "uuid", "json", "rust_decimal"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tower-http = { version = "0.6", features = ["cors"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
config-validator = { path = "../../platform/config-validator" }
event-bus = { path = "../../platform/event-bus" }
platform-http-contracts = { path = "../../platform/http-contracts", features = ["axum"] }
utoipa = { version = "5", features = ["chrono", "uuid", "decimal"] }
utoipa-axum = "0.2"
async-nats = "0.38"
futures = "0.3"
prometheus = "0.13"

[dev-dependencies]
serial_test = "3.3.1"

[lints]
workspace = true
