[package]
name = "numbering"
version = "2.1.2"
edition = "2021"
description = "Numbering service: tenant-scoped, idempotent, atomic sequence allocation"

[[bin]]
name = "numbering"
path = "src/main.rs"

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[[bin]]
name = "dlq_replay_drill"
path = "src/bin/dlq_replay_drill.rs"

[lib]
name = "numbering"
path = "src/lib.rs"

[dependencies]
axum = "0.8"
security = { path = "../../platform/security" }
health = { path = "../../platform/health" }
platform_contracts = { path = "../../platform/platform-contracts" }
config-validator = { path = "../../platform/config-validator" }
event-bus = { path = "../../platform/event-bus" }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "migrate", "uuid", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tower-http = { version = "0.6", features = ["cors"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
async-nats = "0.38"
prometheus = "0.13"
platform-http-contracts = { path = "../../platform/http-contracts", features = ["axum"] }
utoipa = { version = "5", features = ["chrono", "uuid"] }

[dev-dependencies]
serial_test = "3.3.1"
chrono = "0.4"
jsonwebtoken = "9"
rsa = "0.9"
rand = "0.8"
http = "1"
http-body-util = "0.1"

[lints]
workspace = true
