[package]
name = "party-rs"
version = "3.2.5"
edition = "2021"
description = "Party master: companies, individuals, contacts, and addresses"

[[bin]]
name = "party"
path = "src/main.rs"

[[bin]]
name = "party_bench"
path = "src/bin/bench.rs"

[[bin]]
name = "dlq_replay_drill"
path = "src/bin/dlq_replay_drill.rs"

[[bin]]
name = "openapi_dump"
path = "src/bin/openapi_dump.rs"

[dependencies]
axum = "0.8"
security = { path = "../../platform/security" }
health = { path = "../../platform/health" }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "migrate", "uuid", "rust_decimal"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tower-http = { version = "0.6", features = ["cors"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
event-bus = { path = "../../platform/event-bus" }
projections = { path = "../../platform/projections" }
async-nats = "0.38"
futures = "0.3"
prometheus = "0.13"
sha2 = "0.10"
platform-http-contracts = { path = "../../platform/http-contracts", features = ["axum"] }
platform-sdk = { path = "../../platform/platform-sdk" }
utoipa = { version = "5", features = ["chrono", "uuid"] }
config-validator = { path = "../../platform/config-validator" }

[dev-dependencies]
serial_test = "3.3.1"
uuid = { version = "1", features = ["v4"] }

[lints]
workspace = true
