[package]
name = "payments-rs"
version = "5.0.0"
edition = "2021"
description = "Payment processing, reconciliation, and Tilled gateway integration"

[dependencies]
anyhow = "1"
axum = "0.8"
security = { path = "../../platform/security" }
health = { path = "../../platform/health" }
platform-sdk = { path = "../../platform/platform-sdk" }
platform-http-contracts = { path = "../../platform/http-contracts", features = ["axum"] }
utoipa = { version = "5", features = ["chrono", "uuid"] }
utoipa-axum = "0.2"
config-validator = { path = "../../platform/config-validator" }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "migrate", "uuid"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tower-http = { version = "0.6", features = ["cors"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
event-bus = { path = "../../platform/event-bus" }
projections = { path = "../../platform/projections" }
futures = "0.3"
async-nats = "0.38"
prometheus-client = "0.22"
prometheus = "0.13"
lazy_static = "1.4"

[dev-dependencies]
serial_test = "3.3.1"
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"

[lints]
workspace = true
