[package]
name = "pdf-editor-rs"
version = "0.1.0"
edition = "2021"
description = "PDF template management, form submissions, annotations, and document generation"

[[bin]]
name = "pdf-editor-rs"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
security = { path = "../../platform/security" }
health = { path = "../../platform/health" }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "migrate", "uuid"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tower-http = { version = "0.6", features = ["cors"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
event-bus = { path = "../../platform/event-bus" }
async-nats = "0.38"
async-trait = "0.1"
anyhow = "1"
futures = "0.3"
prometheus = "0.13"
lazy_static = "1.4"
http = "1"
pdfium-render = { version = "0.8", features = ["thread_safe"] }
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
regex = "1"

[dev-dependencies]
serial_test = "3.3.1"

[lints]
workspace = true
