[package]
name = "pdf-editor-rs"
version = "2.1.3"
edition = "2021"
description = "PDF template management, form submissions, annotations, and document generation"

[[bin]]
name = "pdf-editor-rs"
path = "src/main.rs"

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[[bin]]
name = "dlq_replay_drill"
path = "src/bin/dlq_replay_drill.rs"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
security = { path = "../../platform/security" }
health = { path = "../../platform/health" }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "migrate", "uuid"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tower-http = { version = "0.6", features = ["cors"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
config-validator = { path = "../../platform/config-validator" }
event-bus = { path = "../../platform/event-bus" }
async-nats = "0.38"
async-trait = "0.1"
anyhow = "1"
futures = "0.3"
prometheus = "0.13"
lazy_static = "1.4"
http = "1"
pdfium-render = { version = "0.8", features = ["thread_safe"] }
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
regex = "1"
platform-http-contracts = { path = "../../platform/http-contracts", features = ["axum"] }
utoipa = { version = "5", features = ["chrono", "uuid"] }

[dev-dependencies]
serial_test = "3.3.1"

[lints]
workspace = true
