[package]
name = "production-rs"
version = "3.7.1"
edition = "2021"
description = "Production execution: work orders, operations, workcenters, routing, and component issue/receipt workflows"

[dependencies]
axum = "0.8"
security = { path = "../../platform/security" }
health = { path = "../../platform/health" }
platform-http-contracts = { path = "../../platform/http-contracts", features = ["axum"] }
platform-audit = { package = "audit", path = "../../platform/audit" }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "migrate", "uuid"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tower-http = { version = "0.6", features = ["cors"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
prometheus = "0.13"
config-validator = { path = "../../platform/config-validator" }
event-bus = { path = "../../platform/event-bus" }
platform-sdk = { path = "../../platform/platform-sdk" }
platform-client-numbering = { path = "../../clients/numbering" }
platform-client-outside-processing = { path = "../../clients/outside-processing" }
futures = "0.3"
utoipa = { version = "5", features = ["chrono", "uuid"] }

[dev-dependencies]
migration-safety-test = { path = "../../tools/migration-safety-test" }
serial_test = "3.3.1"
http-body-util = "0.1"

[[bin]]
name = "openapi_dump"
path = "src/bin/openapi_dump.rs"

[lints]
workspace = true
