[package]
name = "quality-inspection-rs"
version = "3.1.1"
edition = "2021"
description = "Quality Inspection: receiving inspection, in-process inspection, disposition tracking"

[dependencies]
axum = "0.8"
security = { path = "../../platform/security" }
health = { path = "../../platform/health" }
platform-sdk = { path = "../../platform/platform-sdk" }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "migrate", "uuid"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tower-http = { version = "0.6", features = ["cors"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
prometheus = "0.13"
event-bus = { path = "../../platform/event-bus" }
platform-http-contracts = { path = "../../platform/http-contracts", features = ["axum"] }
config-validator = { path = "../../platform/config-validator" }
utoipa = { version = "5", features = ["chrono", "uuid"] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
serial_test = "3.3.1"
jsonwebtoken = "9"

[[bin]]
name = "openapi_dump"
path = "src/bin/openapi_dump.rs"

[lints]
workspace = true
