[package]
name = "reporting"
version = "2.1.0"
edition = "2021"
description = "Financial reporting: aging, KPIs, statements, and cash flow forecasts"

[dependencies]
axum = "0.8"
security = { path = "../../platform/security" }
health = { path = "../../platform/health" }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "migrate", "uuid"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tower-http = { version = "0.6", features = ["cors"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
prometheus = "0.13"
event-bus = { path = "../../platform/event-bus" }
platform-http-contracts = { path = "../../platform/http-contracts", features = ["axum"] }
config-validator = { path = "../../platform/config-validator" }
utoipa = { version = "5", features = ["chrono", "uuid"] }
projections = { path = "../../platform/projections" }
async-trait = "0.1"
futures = "0.3"
anyhow = "1"
csv = "1"
rust_xlsxwriter = "0.80"
printpdf = "0.7"

[dev-dependencies]
serial_test = "3.3.1"
uuid = { version = "1", features = ["v4"] }
http-body-util = "0.1"
dotenvy = "0.15"

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[[bin]]
name = "dlq_replay_drill"
path = "src/bin/dlq_replay_drill.rs"

[[bin]]
name = "openapi_dump"
path = "src/bin/openapi_dump.rs"

[lints]
workspace = true
