[package]
name = "shipping-receiving-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "shipping-receiving-rs"
path = "src/main.rs"

[lib]
name = "shipping_receiving_rs"
path = "src/lib.rs"

[dependencies]
axum = "0.8"
security = { path = "../../platform/security" }
health = { path = "../../platform/health" }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "migrate", "uuid"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tower-http = { version = "0.6", features = ["cors"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = "0.13"
thiserror = "2"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
reqwest = { version = "0.12", features = ["json"] }
event-bus = { path = "../../platform/event-bus" }
async-nats = "0.38"
futures = "0.3"

[dev-dependencies]
serial_test = "3.3.1"

[lints]
workspace = true
