[package]
name = "shipping-receiving-rs"
version = "3.9.0"
edition = "2021"
description = "Inbound and outbound shipment tracking with inventory integration"

[[bin]]
name = "shipping-receiving-rs"
path = "src/main.rs"

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[[bin]]
name = "dlq_replay_drill"
path = "src/bin/dlq_replay_drill.rs"

[lib]
name = "shipping_receiving_rs"
path = "src/lib.rs"

[dependencies]
axum = "0.8"
security = { path = "../../platform/security" }
health = { path = "../../platform/health" }
platform-sdk = { path = "../../platform/platform-sdk" }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "migrate", "uuid"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tower-http = { version = "0.6", features = ["cors"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = "0.13"
thiserror = "2"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"
platform-client-inventory = { path = "../../clients/inventory" }
platform-client-quality-inspection = { path = "../../clients/quality-inspection" }
event-bus = { path = "../../platform/event-bus" }
async-nats = "0.38"
futures = "0.3"
platform-http-contracts = { path = "../../platform/http-contracts", features = ["axum"] }
utoipa = { version = "5", features = ["chrono", "uuid"] }
utoipa-axum = "0.2"
config-validator = { path = "../../platform/config-validator" }
quick-xml = "0.37"

[dev-dependencies]
migration-safety-test = { path = "../../tools/migration-safety-test" }
serial_test = "3.3.1"
platform_contracts = { path = "../../platform/platform-contracts" }

[[bin]]
name = "openapi_dump"
path = "src/bin/openapi_dump.rs"

[lints]
workspace = true
